src/main/resources/static/css/style.scss
@import './_bootstrap/scss/functions';
@import './_bootstrap/scss/variables';

$enable-responsive-font-sizes: true;
$grid-breakpoints: (
        xs: 0,
        sm: 576px,
        md: 768px,
        lg: 992px,
        xl: 1200px,
        xxl: 1920px
);

@import './_bootstrap/scss/bootstrap-reboot';
@import './_bootstrap/scss/utilities';
@import './_bootstrap/scss/mixins';
@import './_bootstrap/scss/type';
@import './_bootstrap/scss/bootstrap-grid';
@import './_bootstrap/scss/images';
@import './_bootstrap/scss/forms';
@import './_bootstrap/scss/nav';
@import './_bootstrap/scss/navbar';
@import './_bootstrap/scss/breadcrumb';
@import './_bootstrap/scss/button-group';
@import './_bootstrap/scss/buttons';
@import './_bootstrap/scss/alert';

/* ==========================================================================
   Colors
   ========================================================================== */

$primary-color: #ff8c00;
$secondary-color: #999;
$primary-background-color: #dedede;
//$font-color: #5f5c52;
$font-color: #fff;

/* ==========================================================================
   Fonts
   ========================================================================== */

@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,700;1,400&display=swap');

/* ==========================================================================
   Font-Weight
   ========================================================================== */

$font-light: 300;
$font-normal: 400;
$font-bold: 700;

/* ==========================================================================
   Font-Size
   ========================================================================== */

$font-size-normal: 1.3125rem;
$font-size-smaller: ($font-size-normal * 0.8);
$font-size-small: ($font-size-smaller * 0.8);
$font-size-bigger: ($font-size-normal * 1.2);
$font-size-big: ($font-size-bigger * 1.2);

$h1-size: 2.25rem;
$h2-size: (2.8rem * 0.7);
$h3-size: ($h2-size * 0.7);

$h1-small-size: ($h1-size * 0.8);
$h2-small-size: ($h2-size * 0.8);
$h3-small-size: ($h3-size * 0.8);

/* ==========================================================================
   Shadow
   ========================================================================== */

$z0: none;
$z1: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
$z2: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12), 0 2px 4px -1px rgba(0, 0, 0, 0.3);
$z3: 0 6px 10px 0 rgba(0, 0, 0, 0.14), 0 1px 18px 0 rgba(0, 0, 0, 0.12), 0 3px 5px -1px rgba(0, 0, 0, 0.3);
$z4: 0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12), 0 5px 5px -3px rgba(0, 0, 0, 0.3);
$z5: 0 16px 24px 2px rgba(0, 0, 0, 0.14), 0 6px 30px 5px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(0, 0, 0, 0.3);

/* ==========================================================================
   Helper
   ========================================================================== */

[v-cloak] {
    display: none !important;
}

/* ==========================================================================
   General
   ========================================================================== */

html,
body,
.layout {
    height: 100%;
}

body,
.layout {
    display: flex;
    flex-direction: column;
}

body {
    font-family: 'Open Sans', sans-serif;
    @include font-size($font-size-normal);
    line-height: 1.7;
    color: $font-color;
}


/* ==========================================================================
   Button/Link Default
   ========================================================================== */
a,
button {
    @include font-size($font-size-normal);
}

a.button,
button.button {
    border: 1px solid #000;
    background-color: #000;
    display: inline-block;
    width: auto;
    color: #fff;
    padding: 10px;
    text-decoration: none;
    &:hover {
        text-decoration: none;
        font-weight: $font-normal;
    }

    &.button-default-outline {
        background-color: transparent;
        color: #fff;
        border: 1px solid #fff;
    }
    &.button-primary-outline {
        background-color: transparent;
        color: $primary-color;
        border: 1px solid $primary-color;
    }
}

.button.button-full {
    display: block;
    width: 100%;
    text-align: center;
}

.button.button-primary {
    border-color: $primary-color;
    background-color: $primary-color;
    color: #fff;
    .badge {
        background-color: #fff;
        color: $primary-color;
    }
}

.button.button-secondary {
    border-color: transparent;
    background-color: $secondary-color;
    color: #000;
}

a,
.button.button-link {
    border: none;
    background-color: transparent;
    color: $primary-color;
    padding: 0;
    border-bottom: 1px solid transparent;
    &:hover {
        box-shadow: none;
        text-decoration: none;
        color: $primary-color;
        border-bottom: 1px solid $primary-color;
    }
}

main {
    a,
    .button-link {
        text-decoration: underline;
        &:hover {
            text-decoration: underline;
            border-bottom: 0;
            color: darken($primary-color, 20);
        }
        &.button-primary {
            &:hover {
                border-bottom: 1px solid $primary-color;
            }
        }
    }
}



/* ==========================================================================
   Textsizing
   ========================================================================== */

.bigger-text {
    @include font-size($font-size-big);
}

.big-text {
    @include font-size($font-size-bigger);
}

.small-text {
    @include font-size($font-size-smaller);
}

.smaller-text {
    @include font-size($font-size-small);
}

.light-text {
    font-weight: $font-light;
}

h1 {
    @include font-size($h1-size);
}

.small-h1 {
    @include font-size($h1-small-size);
    font-weight: $font-light;
}

h2 {
    @include font-size($h2-size);
}

.small-h2 {
    @include font-size($h2-small-size);
    font-weight: $font-light;
}

/* ==========================================================================
   Header Navigation
   ========================================================================== */


/* ==========================================================================
   Footer
   ========================================================================== */

.footer {
    margin-top: auto;
    .text-muted {
        display: block;
        padding: 0.5rem 1rem;
    }
}

/* ==========================================================================
   Startpage
   ========================================================================== */

.startpage {
    background-image: url(../img/header_image.jpg);
    background-size: cover;
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
}

/* ==========================================================================
   Article
   ========================================================================== */

.container-content {
    background-color: rgba(0,0,0,0.6);
    width: 100%;
    padding: 2rem 0;
}

/* ==========================================================================
   Divider
   ========================================================================== */

.divider {
    height: 100%;
    width: 2px;
    transform: rotate3d(1, 1, 1, 20deg);
    background-color: #fff;
    margin: 0 auto;
}

/* ==========================================================================
   Login/Registration
   ========================================================================== */

.loginRegistration {
    .button-primary {
        display: flex;
        margin-left: auto;
    }
}

